tests/requests/invalid/005.py
from restkit.http.errors import InvalidHeaderName
request = InvalidHeaderName